Java 17: Fix more tests